# inspirobot

./: README.md  pyproject.toml
src/inspirobot/: crew.py  main.py
src/inspirobot/config/: agents.yaml  tasks.yaml
src/inspirobot/tools/: SearchYoutubeTool.py
